--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,6 +8,7 @@
 .product-main .details_List .details_inner h2{font-size:24px;color:#333;margin-bottom:10px;}
 .product-main .details_List .details_inner h2 a{color:#333;}
 .snipcart-add-item{border:1px solid #034694;padding:10px 15px;display:inline-block;font-size:12px;color:#fff!important;border-radius:5px;font-weight:600;background:#034694;text-decoration:none!important;text-transform:uppercase;}
+.method-payment{border:1px solid #034694;padding:10px 15px;display:inline-block;font-size:12px;color:#fff!important;border-radius:5px;font-weight:600;background:#034694;text-decoration:none!important;text-transform:uppercase;}
 .product-details{}
 .product-details .gatsby-image-wrapper{height:500px;}
 
@@ -43,6 +44,7 @@ footer.site-footer{background:#333;padding:0;text-align:center;}
 footer.site-footer *{color:#fff;}
 .no-image{height:200px;background:#ef3d5675;display:flex;justify-content:center;flex-direction:column;text-align:center;color:#fff;text-shadow:1px 1px 5px #000;}
 .snipcart-add-item i.fas{margin-right:8px;}
+.method-payment i.fas{margin-right:8px;}
 .product-main .details_List .details_inner p{font-size:16px;}
 .product-main .details_List .details_inner p{font-size:17px;}
 .snip-layout .snip-header{background:#333!important;}
@@ -211,6 +213,7 @@ footer.site-footer ul{margin:0;}
   ul.blog-list li .post-item .post-thumbnail .gatsby-image-wrapper{height:200px;}
   .blogs-page .post-thumbnail .gatsby-image-wrapper{height:auto;}
   .snipcart-add-item{padding:10px 10px;}
+  .method-payment{padding:10px 10px;}
 }
 
 /* Media Css */
