--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,7 +10,7 @@
 .snipcart-add-item{border:1px solid #034694;padding:10px 15px;display:inline-block;font-size:12px;color:#fff!important;border-radius:5px;font-weight:600;background:#034694;text-decoration:none!important;text-transform:uppercase;}
 .method-payment{border:1px solid #034694;padding:10px 15px;display:inline-block;font-size:12px;color:#fff!important;border-radius:5px;font-weight:600;background:#034694;text-decoration:none!important;text-transform:uppercase;}
 .product-details{}
-.product-details .gatsby-image-wrapper{height:500px;}
+.product-details .gatsby-image-wrapper{max-height:500px;}
 
 /* header css */
 header.site-header{width:100%;background:#333333;z-index:9;padding:20px 0 0 0;}
